grammar.js
    source_file: $ => repeat(seq(optional($.toplevel_stmt), ';')),

    toplevel_stmt: $ => choice(
        $.stmt,
        $.TransactionStmtLegacy
      ),
    stmt: $ => choice(
        $.AlterEventTrigStmt,
        $.AlterCollationStmt,
        $.AlterDatabaseStmt,
        $.AlterDatabaseSetStmt,
        $.AlterDefaultPrivilegesStmt,
        $.AlterDomainStmt,
        $.AlterEnumStmt,
        $.AlterExtensionStmt,
        $.AlterExtensionContentsStmt,
        $.AlterFdwStmt,
        $.AlterForeignServerStmt,
        $.AlterFunctionStmt,
        $.AlterGroupStmt,
        $.AlterObjectDependsStmt,
        $.AlterObjectSchemaStmt,
        $.AlterOwnerStmt,
        $.AlterOperatorStmt,
        $.AlterTypeStmt,
        $.AlterPolicyStmt,
        $.AlterSeqStmt,
        $.AlterSystemStmt,
        $.AlterTableStmt,
        $.AlterTblSpcStmt,
        $.AlterCompositeTypeStmt,
        $.AlterPublicationStmt,
        $.AlterRoleSetStmt,
        $.AlterRoleStmt,
        $.AlterSubscriptionStmt,
        $.AlterStatsStmt,
        $.AlterTSConfigurationStmt,
        $.AlterTSDictionaryStmt,
        $.AlterUserMappingStmt,
        $.AnalyzeStmt,
        $.CallStmt,
        $.CheckPointStmt,
        $.ClosePortalStmt,
        $.ClusterStmt,
        $.CommentStmt,
        $.ConstraintsSetStmt,
        $.CopyStmt,
        $.CreateAmStmt,
        $.CreateAsStmt,
        $.CreateAssertionStmt,
        $.CreateCastStmt,
        $.CreateConversionStmt,
        $.CreateDomainStmt,
        $.CreateExtensionStmt,
        $.CreateFdwStmt,
        $.CreateForeignServerStmt,
        $.CreateForeignTableStmt,
        $.CreateFunctionStmt,
        $.CreateGroupStmt,
        $.CreateMatViewStmt,
        $.CreateOpClassStmt,
        $.CreateOpFamilyStmt,
        $.CreatePublicationStmt,
        $.AlterOpFamilyStmt,
        $.CreatePolicyStmt,
        $.CreatePLangStmt,
        $.CreateSchemaStmt,
        $.CreateSeqStmt,
        $.CreateStmt,
        $.CreateSubscriptionStmt,
        $.CreateStatsStmt,
        $.CreateTableSpaceStmt,
        $.CreateTransformStmt,
        $.CreateTrigStmt,
        $.CreateEventTrigStmt,
        $.CreateRoleStmt,
        $.CreateUserStmt,
        $.CreateUserMappingStmt,
        $.CreatedbStmt,
        $.DeallocateStmt,
        $.DeclareCursorStmt,
        $.DefineStmt,
        $.DeleteStmt,
        $.DiscardStmt,
        $.DoStmt,
        $.DropCastStmt,
        $.DropOpClassStmt,
        $.DropOpFamilyStmt,
        $.DropOwnedStmt,
        $.DropStmt,
        $.DropSubscriptionStmt,
        $.DropTableSpaceStmt,
        $.DropTransformStmt,
        $.DropRoleStmt,
        $.DropUserMappingStmt,
        $.DropdbStmt,
        $.ExecuteStmt,
        $.ExplainStmt,
        $.FetchStmt,
        $.GrantStmt,
        $.GrantRoleStmt,
        $.ImportForeignSchemaStmt,
        $.IndexStmt,
        $.InsertStmt,
        $.ListenStmt,
        $.RefreshMatViewStmt,
        $.LoadStmt,
        $.LockStmt,
        $.MergeStmt,
        $.NotifyStmt,
        $.PrepareStmt,
        $.ReassignOwnedStmt,
        $.ReindexStmt,
        $.RemoveAggrStmt,
        $.RemoveFuncStmt,
        $.RemoveOperStmt,
        $.RenameStmt,
        $.RevokeStmt,
        $.RevokeRoleStmt,
        $.RuleStmt,
        $.SecLabelStmt,
        $.SelectStmt,
        $.TransactionStmt,
        $.TruncateStmt,
        $.UnlistenStmt,
        $.UpdateStmt,
        $.VacuumStmt,
        $.VariableResetStmt,
        $.VariableSetStmt,
        $.VariableShowStmt,
        $.ViewStmt
      ),
    opt_single_name: $ => $.ColId,
    columnDef: $ => seq($.ColId, $.Typename, optional($.opt_column_storage), optional($.opt_column_compression), optional($.create_generic_options), optional($.ColQualList)),
    object_type_any_name: $ => choice(
        $.kw_table,
        $.kw_sequence,
        $.kw_view,
        seq($.kw_materialized, $.kw_view),
        $.kw_index,
        seq($.kw_foreign, $.kw_table),
        $.kw_collation,
        $.kw_conversion,
        $.kw_statistics,
        seq($.kw_text, $.kw_search, $.kw_parser),
        seq($.kw_text, $.kw_search, $.kw_dictionary),
        seq($.kw_text, $.kw_search, $.kw_template),
        seq($.kw_text, $.kw_search, $.kw_configuration)
      ),
    any_name_list: $ => choice(
        $.any_name,
        seq($.any_name_list, ',', $.any_name)
      ),
    any_name: $ => choice(
        $.ColId,
        seq($.ColId, $.attrs)
      ),
    index_params: $ => choice(
        $.index_elem,
        seq($.index_params, ',', $.index_elem)
      ),
    index_elem: $ => choice(
        seq($.ColId, optional($.index_elem_options)),
        seq($.func_expr_windowless, optional($.index_elem_options)),
        seq('(', $.a_expr, ')', optional($.index_elem_options))
      ),
    select_no_parens: $ => choice(
        $.simple_select,
        seq($.select_clause, $.sort_clause),
        seq($.select_clause, optional($.opt_sort_clause), $.for_locking_clause, optional($.opt_select_limit)),
        seq($.select_clause, optional($.opt_sort_clause), $.select_limit, optional($.opt_for_locking_clause)),
        seq($.with_clause, $.select_clause),
        seq($.with_clause, $.select_clause, $.sort_clause),
        seq($.with_clause, $.select_clause, optional($.opt_sort_clause), $.for_locking_clause, optional($.opt_select_limit)),
        seq($.with_clause, $.select_clause, optional($.opt_sort_clause), $.select_limit, optional($.opt_for_locking_clause))
      ),
    select_clause: $ => choice(
        $.simple_select,
        $.select_with_parens
      ),
    simple_select: $ => choice(
        seq($.kw_select, optional($.opt_all_clause), optional($.opt_target_list), optional($.into_clause), optional($.from_clause), optional($.where_clause), optional($.group_clause), optional($.having_clause), optional($.window_clause)),
        seq($.kw_select, $.distinct_clause, $.target_list, optional($.into_clause), optional($.from_clause), optional($.where_clause), optional($.group_clause), optional($.having_clause), optional($.window_clause)),
        $.values_clause,
        seq($.kw_table, $.relation_expr),
        seq($.select_clause, $.kw_union, optional($.set_quantifier), $.select_clause),
        seq($.select_clause, $.kw_intersect, optional($.set_quantifier), $.select_clause),
        seq($.select_clause, $.kw_except, optional($.set_quantifier), $.select_clause)
      ),
    with_clause: $ => choice(
        seq($.kw_with, $.cte_list),
        seq($.kw_with, $.cte_list),
        seq($.kw_with, $.kw_recursive, $.cte_list)
      ),
    cte_list: $ => choice(
        $.common_table_expr,
        seq($.cte_list, ',', $.common_table_expr)
      ),
    common_table_expr: $ => seq($.name, optional($.opt_name_list), $.kw_as, optional($.opt_materialized), '(', $.PreparableStmt, ')', optional($.opt_search_clause), optional($.opt_cycle_clause)),
    from_clause: $ => seq($.kw_from, $.from_list),
    from_list: $ => choice(
        $.table_ref,
        seq($.from_list, ',', $.table_ref)
      ),
    table_ref: $ => choice(
        seq($.relation_expr, optional($.opt_alias_clause)),
        seq($.relation_expr, optional($.opt_alias_clause), $.tablesample_clause),
        seq($.func_table, optional($.func_alias_clause)),
        seq($.kw_lateral, $.func_table, optional($.func_alias_clause)),
        seq($.xmltable, optional($.opt_alias_clause)),
        seq($.kw_lateral, $.xmltable, optional($.opt_alias_clause)),
        seq($.select_with_parens, optional($.opt_alias_clause)),
        seq($.kw_lateral, $.select_with_parens, optional($.opt_alias_clause)),
        $.joined_table,
        seq('(', $.joined_table, ')', $.alias_clause),
        seq($.json_table, optional($.opt_alias_clause)),
        seq($.kw_lateral, $.json_table, optional($.opt_alias_clause))
      ),
    relation_expr: $ => choice(
        $.qualified_name,
        $.extended_relation_expr
      ),
    a_expr: $ => choice(
        $.c_expr,
        seq($.a_expr, '::', $.Typename),
        seq($.a_expr, $.kw_collate, $.any_name),
        seq($.a_expr, $.kw_at, $.kw_time, $.kw_zone, $.a_expr),
        seq($.a_expr, $.kw_at, $.kw_local),
        seq('+', $.a_expr),
        seq('-', $.a_expr),
        seq($.a_expr, '+', $.a_expr),
        seq($.a_expr, '-', $.a_expr),
        seq($.a_expr, '*', $.a_expr),
        seq($.a_expr, '/', $.a_expr),
        seq($.a_expr, '%', $.a_expr),
        seq($.a_expr, '^', $.a_expr),
        seq($.a_expr, '<', $.a_expr),
        seq($.a_expr, '>', $.a_expr),
        seq($.a_expr, '=', $.a_expr),
        seq($.a_expr, '<=', $.a_expr),
        seq($.a_expr, '>=', $.a_expr),
        seq($.a_expr, '<>', $.a_expr),
        seq($.a_expr, $.qual_Op, $.a_expr),
        seq($.qual_Op, $.a_expr),
        seq($.a_expr, $.kw_and, $.a_expr),
        seq($.a_expr, $.kw_or, $.a_expr),
        seq($.kw_not, $.a_expr),
        seq($.kw_not, $.a_expr),
        seq($.a_expr, $.kw_like, $.a_expr),
        seq($.a_expr, $.kw_like, $.a_expr, $.kw_escape, $.a_expr),
        seq($.a_expr, $.kw_not, $.kw_like, $.a_expr),
        seq($.a_expr, $.kw_not, $.kw_like, $.a_expr, $.kw_escape, $.a_expr),
        seq($.a_expr, $.kw_ilike, $.a_expr),
        seq($.a_expr, $.kw_ilike, $.a_expr, $.kw_escape, $.a_expr),
        seq($.a_expr, $.kw_not, $.kw_ilike, $.a_expr),
        seq($.a_expr, $.kw_not, $.kw_ilike, $.a_expr, $.kw_escape, $.a_expr),
        seq($.a_expr, $.kw_similar, $.kw_to, $.a_expr),
        seq($.a_expr, $.kw_similar, $.kw_to, $.a_expr, $.kw_escape, $.a_expr),
        seq($.a_expr, $.kw_not, $.kw_similar, $.kw_to, $.a_expr),
        seq($.a_expr, $.kw_not, $.kw_similar, $.kw_to, $.a_expr, $.kw_escape, $.a_expr),
        seq($.a_expr, $.kw_is, $.kw_null),
        seq($.a_expr, $.kw_isnull),
        seq($.a_expr, $.kw_is, $.kw_not, $.kw_null),
        seq($.a_expr, $.kw_notnull),
        seq($.row, $.kw_overlaps, $.row),
        seq($.a_expr, $.kw_is, $.kw_true),
        seq($.a_expr, $.kw_is, $.kw_not, $.kw_true),
        seq($.a_expr, $.kw_is, $.kw_false),
        seq($.a_expr, $.kw_is, $.kw_not, $.kw_false),
        seq($.a_expr, $.kw_is, $.kw_unknown),
        seq($.a_expr, $.kw_is, $.kw_not, $.kw_unknown),
        seq($.a_expr, $.kw_is, $.kw_distinct, $.kw_from, $.a_expr),
        seq($.a_expr, $.kw_is, $.kw_not, $.kw_distinct, $.kw_from, $.a_expr),
        seq($.a_expr, $.kw_between, optional($.opt_asymmetric), $.b_expr, $.kw_and, $.a_expr),
        seq($.a_expr, $.kw_not, $.kw_between, optional($.opt_asymmetric), $.b_expr, $.kw_and, $.a_expr),
        seq($.a_expr, $.kw_between, $.kw_symmetric, $.b_expr, $.kw_and, $.a_expr),
        seq($.a_expr, $.kw_not, $.kw_between, $.kw_symmetric, $.b_expr, $.kw_and, $.a_expr),
        seq($.a_expr, $.kw_in, $.select_with_parens),
        seq($.a_expr, $.kw_in, '(', $.expr_list, ')'),
        seq($.a_expr, $.kw_not, $.kw_in, $.select_with_parens),
        seq($.a_expr, $.kw_not, $.kw_in, '(', $.expr_list, ')'),
        seq($.a_expr, $.subquery_Op, $.sub_type, $.select_with_parens),
        seq($.a_expr, $.subquery_Op, $.sub_type, '(', $.a_expr, ')'),
        seq($.kw_unique, optional($.opt_unique_null_treatment), $.select_with_parens),
        seq($.a_expr, $.kw_is, $.kw_document),
        seq($.a_expr, $.kw_is, $.kw_not, $.kw_document),
        seq($.a_expr, $.kw_is, $.kw_normalized),
        seq($.a_expr, $.kw_is, $.unicode_normal_form, $.kw_normalized),
        seq($.a_expr, $.kw_is, $.kw_not, $.kw_normalized),
        seq($.a_expr, $.kw_is, $.kw_not, $.unicode_normal_form, $.kw_normalized),
        seq($.a_expr, $.kw_is, $.json_predicate_type_constraint, optional($.json_key_uniqueness_constraint_opt)),
        seq($.a_expr, $.kw_is, $.kw_not, $.json_predicate_type_constraint, optional($.json_key_uniqueness_constraint_opt)),
        $.kw_default
      ),
    c_expr: $ => choice(
        $.columnref,
        $.AexprConst,
        seq($.param, optional($.opt_indirection)),
        seq('(', $.a_expr, ')', optional($.opt_indirection)),
        $.case_expr,
        $.func_expr,
        $.select_with_parens,
        seq($.select_with_parens, $.indirection),
        seq($.kw_exists, $.select_with_parens),
        seq($.kw_array, $.select_with_parens),
        seq($.kw_array, $.array_expr),
        $.explicit_row,
        $.implicit_row,
        seq($.kw_grouping, '(', $.expr_list, ')')
      ),
    opt_target_list: $ => $.target_list,
    target_list: $ => choice(
        $.target_el,
        seq($.target_list, ',', $.target_el)
      ),
    target_el: $ => choice(
        seq($.a_expr, $.kw_as, $.ColLabel),
        seq($.a_expr, $.BareColLabel),
        $.a_expr,
        '*'
      ),
    qualified_name: $ => choice(
        $.ColId,
        seq($.ColId, $.indirection)
      ),
    name: $ => $.ColId,
    type_function_name: $ => choice(
        $.identifier,
        $.unreserved_keyword,
        $.type_func_name_keyword
      ),
    kw_as: _ => token(prec(1, /[aA][sS]/)),
    kw_create: _ => token(prec(1, /[cC][rR][eE][aA][tT][eE]/)),
    kw_drop: _ => token(prec(1, /[dD][rR][oO][pP]/)),
    kw_from: _ => token(prec(1, /[fF][rR][oO][mM]/)),
    kw_index: _ => token(prec(1, /[iI][nN][dD][eE][xX]/)),
    kw_int: _ => token(prec(1, /[iI][nN][tT]/)),
    kw_name: _ => token(prec(1, /[nN][aA][mM][eE]/)),
    kw_on: _ => token(prec(1, /[oO][nN]/)),
    kw_select: _ => token(prec(1, /[sS][eE][lL][eE][cC][tT]/)),
    kw_table: _ => token(prec(1, /[tT][aA][bB][lL][eE]/)),
    kw_text: _ => token(prec(1, /[tT][eE][xX][tT]/)),
    kw_with: _ => token(prec(1, /[wW][iI][tT][hH]/)),
    identifier: _ => token(prec(0, /[a-zA-Z_\u0080-\u00ff][a-zA-Z0-9_$\u0080-\u00ff]*/)),

    // Double-quoted delimited identifier: "my table" or "My""Column"
    integer_literal: _ => token(/[0-9](_?[0-9])*/),
